# diffdigest

./: pyproject.toml
notebooks/: HunkEmbeddingMetrics.ipynb
src/diffdigest/: cli.py
